--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.lock
+.gradle/4.4/fileHashes/fileHashes.lock
+*.xml
+*.ser
+*.lock
+*.lock
